--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "dev": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "nodemon": "^2.0.20",
